# Phlox

./: .gitignore  CLAUDE.md  FIXES_SUMMARY.md  GEMINI.md  LICENSE  MIGRATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  complete_implementation.py  out  pyproject.toml  setup.py  test_real_data.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
examples/: README.md  basic_usage.py
phlox_test_output/: reaction_network.dot  stats.txt
src/phlox/: __init__.py  cli.py
src/phlox/base/: __init__.py  analyzer.py  atom.py  config.py  constants.py  frame_processor.py  molecule.py  results.py
src/phlox/filter/: __init__.py  contraction.py  oscillation.py
src/phlox/frag/: __init__.py  distance.py  fragmenter.py  union_find.py
src/phlox/io/: __init__.py  config_reader.py  trajectory_reader.py
src/phlox/network/: __init__.py  builder.py  classifier.py
src/phlox/utils/: __init__.py  batch_smiles.py  chemistry.py  smiles.py
